# meos-rs

./: .gitmodules  Cargo.toml  Dockerfile  README.md  build.rs
.github/workflows/: rust.yml
examples/: 03_ais_assemble.rs  04_ais_polars.rs  ais_full_assemble.rs
src/: lib.rs  utils.rs
src/boxes/: stbox.rs  tbox.rs
src/collections/base/: span.rs  span_set.rs
src/collections/datetime/: date_span.rs  date_span_set.rs  mod.rs  tstz_span.rs  tstz_span_set.rs
src/collections/number/: float_span.rs  float_span_set.rs  int_span.rs  int_span_set.rs  number_span.rs  number_span_set.rs
src/temporal/: interpolation.rs  mod.rs  tbool.rs  temporal.rs  tsequence.rs  tsequence_set.rs  ttext.rs
src/temporal/geo/: mod.rs  tgeo.rs  tgeogpoint.rs  tgeography.rs  tgeometry.rs  tgeompoint.rs
src/temporal/number/: tfloat.rs  tint.rs  tnumber.rs
src/temporal/point/: mod.rs  tgeo.rs  tgeogpoint.rs  tgeography.rs  tgeometry.rs  tgeompoint.rs  tpoint.rs
sys/: Cargo.toml  README.md  build.rs  wrapper.h
sys/meos-src/: Cargo.toml  build.rs
sys/meos-src/src/: lib.rs
sys/prebuilt-bindings/: meos_1.3.rs
sys/src/: lib.rs
