[package]
name = "meos"
version = "0.2.1"
license-file = "LICENSE"
authors = ["David García Morillo <david.garcia.morillo@ulb.be>"]
repository = "https://github.com/MobilityDB/meos-rs"
documentation = "https://docs.rs/crate/meos/"
keywords = ["meos", "libmeos", "mobility", "geotemporal", "gis"]
categories = ["external-ffi-bindings", "algorithms"]
description = "Rust bindings for MEOS C API"
readme = "README.md"
edition = "2021"

[dependencies]
paste = "1.0.15"
meos-sys = { path = "sys", version = "0.1.7", features = ["v1_3alpha"] }
chrono = "0.4.38"
libc = "0.2.155"
bitmask-enum = "2.2.4"
geos = { version = "9.0.0", optional = true }
csv = "1.3.0"

[features]
default = ["geos"]

[dev-dependencies]

serial_test = "3.1.1"
